# rain_radar

./: .gitignore  README.md
.github/workflows/: build-firmware.yml
firmware_c/: Dockerfile  README.md
firmware_c/rain_radar_app/: CMakeLists.txt  battery.hpp  data_fetching.cpp  data_fetching.hpp  lwipopts.h  main.cpp  persistent_data.hpp  rain_radar_common.hpp  wifi_setup.cpp
server/: README.md  main.py  run_with_healthcheck.sh
